--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 winnow = { version = "0.5.26" }
 strum = { version = "0.25.0", features = ["derive"] }
 iced-x86 = "1.20.0"
+termcolor = "1.4.0"
+ratatui = "0.24.0"
+crossterm = "0.27.0"
+anyhow = "1.0.44"
